--- a/Convolve/Convolve/Convolve.vcxproj.filters
+++ b/Convolve/Convolve/Convolve.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Convolve.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReadWAV.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
